--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" href="/barbershop-logo.png" />
     <link rel="shortcut icon" href="/barbershop-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Barbershop - Services de Coiffure Masculine Professionnels</title>
+    <title>Ricci Carwash</title>
     <!-- Google Fonts: Montserrat, Roboto and Roboto Mono -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
