--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="apple-touch-icon" href="/barbershop-logo.png" />
     <link rel="shortcut icon" href="/barbershop-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ricci Carwash</title>
-    <!-- Google Fonts: Montserrat, Roboto and Roboto Mono -->
+    <title>Picci | Votre station multiservices tout-en-un</title>
+    <!-- Google Fonts: Roboto seulement -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
